--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "Software Carpentry"
 
 
 #------------------------------------------------------------
@@ -28,7 +28,7 @@ repository: <USERNAME>/<PROJECT>
 # Email address, no mailto:
 # (Don't change this -- the contact address for your workshop will be set 
 # in the index.md file)
-email: "team@carpentries.org"
+email: "lindsey.fox@vanderbilt.edu"
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
